Se cambió UI, se agregó ImageCrop y ya se carga la foto de perfil a Firebase Storage.

--- a/app/src/main/res/layout/dialog_password.xml
+++ b/app/src/main/res/layout/dialog_password.xml
@@ -11,41 +11,39 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/verifica_tu_contrasena"
-        android:textColor="#E91E1E"
-        android:textSize="24dp"/>
+        android:textColor="#3A91B8"
+        android:textSize="24dp" />
 
-    <EditText
-        android:id="@+id/dialogPass_eTXTpassword"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/dialogPass_TXTpassword"
+        android:layout_below="@+id/dialogPass_TXTtitulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/dialogPass_TXTtitulo"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
-        android:hint="@string/vuelve_a_escribir_tu_contrasena_aqui"
-        android:inputType="textPassword" />
+        android:hint="@string/contrasena"
+        app:boxCornerRadiusTopStart="15dp"
+        app:boxCornerRadiusTopEnd="15dp"
+        app:startIconDrawable="@drawable/password_icon"
+        app:endIconMode="password_toggle"
+        app:counterEnabled="true"
+        app:counterMaxLength="20"
+        app:helperText="Vuelve a escribir tu contraseña"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/dialogPass_eTXTpassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:maxLength="20"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/dialogPass_eTXTpassword"
+        android:layout_below="@+id/dialogPass_TXTpassword"
         android:gravity="end"
         android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/dialogPass_BTNverificar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/btn_dialogpassword"
-            android:layout_marginHorizontal="10dp"
-            android:padding="10dp"
-            android:text="@string/verificar"
-            android:textColor="#E91E1E"
-            android:textSize="14dp"
-            app:backgroundTint="@null"/>
 
         <Button
             android:id="@+id/dialogPass_BTNcancelar"
@@ -54,7 +52,19 @@
             android:background="@drawable/btn_dialogpassword"
             android:padding="10dp"
             android:text="@string/cancelar"
-            android:textColor="#E91E1E"
+            android:textColor="#3A91B8"
+            android:textSize="14dp"
+            app:backgroundTint="@null"/>
+
+        <Button
+            android:id="@+id/dialogPass_BTNverificar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_dialogpassword"
+            android:layout_marginHorizontal="5dp"
+            android:padding="10dp"
+            android:text="@string/verificar"
+            android:textColor="#3A91B8"
             android:textSize="14dp"
             app:backgroundTint="@null"/>
 
