--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -21,43 +21,51 @@
             <ImageView
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:src="@drawable/logotipo"
-                android:layout_gravity="center_horizontal"/>
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/logotipo" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/registrate_"
+                android:textSize="36dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="10dp"/>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/signUp_TXTemail"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:hint="@string/correo_electronico"
-                app:boxCornerRadiusTopStart="15dp"
                 app:boxCornerRadiusTopEnd="15dp"
-                app:startIconDrawable="@drawable/email_icon"
+                app:boxCornerRadiusTopStart="15dp"
                 app:endIconMode="clear_text"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                app:startIconDrawable="@drawable/email_icon">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/signUp_eTXTemail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
-                    android:textIsSelectable="true"/>
+                    android:textIsSelectable="true" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/signUp_TXTpassword"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
                 android:hint="@string/contrasena"
-                app:boxCornerRadiusTopStart="15dp"
                 app:boxCornerRadiusTopEnd="15dp"
-                app:startIconDrawable="@drawable/password_icon"
-                app:endIconMode="password_toggle"
+                app:boxCornerRadiusTopStart="15dp"
                 app:counterEnabled="true"
                 app:counterMaxLength="20"
+                app:endIconMode="password_toggle"
                 app:helperText="@string/al_menos_6_caracteres"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                app:startIconDrawable="@drawable/password_icon">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/signUp_eTXTpassword"
@@ -65,14 +73,14 @@
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
                     android:maxLength="20"
-                    android:textIsSelectable="true"/>
+                    android:textIsSelectable="true" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/signUp_BTNcontinuar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/continuar"/>
+                android:text="@string/continuar" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
