Se implementó en Navigation Drawer, se personalizó y se agregaron todos los fragments correspondientes de cada item del drawer_menu.

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -42,7 +42,7 @@
                 app:boxCornerRadiusTopEnd="15dp"
                 app:boxCornerRadiusTopStart="15dp"
                 app:endIconMode="clear_text"
-                app:startIconDrawable="@drawable/email_icon">
+                app:startIconDrawable="@drawable/ic_email">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/logIn_eTXTemail"
@@ -64,7 +64,7 @@
                 app:counterEnabled="true"
                 app:counterMaxLength="20"
                 app:endIconMode="password_toggle"
-                app:startIconDrawable="@drawable/password_icon">
+                app:startIconDrawable="@drawable/ic_password">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/logIn_eTXTpassword"
