--- a/app/src/main/res/layout/dialog_password.xml
+++ b/app/src/main/res/layout/dialog_password.xml
@@ -23,7 +23,7 @@
         android:hint="@string/contrasena"
         app:boxCornerRadiusTopStart="15dp"
         app:boxCornerRadiusTopEnd="15dp"
-        app:startIconDrawable="@drawable/password_icon"
+        app:startIconDrawable="@drawable/ic_password"
         app:endIconMode="password_toggle"
         app:counterEnabled="true"
         app:counterMaxLength="20"
