--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -42,7 +42,7 @@
                 app:boxCornerRadiusTopEnd="15dp"
                 app:boxCornerRadiusTopStart="15dp"
                 app:endIconMode="clear_text"
-                app:startIconDrawable="@drawable/email_icon">
+                app:startIconDrawable="@drawable/ic_email">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/signUp_eTXTemail"
@@ -65,7 +65,7 @@
                 app:counterMaxLength="20"
                 app:endIconMode="password_toggle"
                 app:helperText="@string/al_menos_6_caracteres"
-                app:startIconDrawable="@drawable/password_icon">
+                app:startIconDrawable="@drawable/ic_password">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/signUp_eTXTpassword"
