--- a/app/src/main/res/layout/navigationdrawer_cliente.xml
+++ b/app/src/main/res/layout/navigationdrawer_cliente.xml
@@ -23,6 +23,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:menu="@menu/drawer_menu"
+        app:menu="@menu/drawermenu_cliente"
         app:headerLayout="@layout/drawer_header"/>
 </androidx.drawerlayout.widget.DrawerLayout>
